--- a/style.css
+++ b/style.css
@@ -8,6 +8,87 @@ body {
   height: 100vh;
 }
 
+span {
+  word-wrap: break-word;
+}
+
+.header {
+  background-color: #c3707b;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.seperator {
+  min-height: 10px;
+  background-color: #67672d;
+  width: 80%;
+  border-radius: 20px;
+  margin: 10px 25%;
+}
+
+.top-settings {
+  border-radius: 20px;
+  background-color: white;
+  padding: 10px 30px;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  /* text-wrap: wrap; */
+  text-align: center;
+}
+
+button {
+  border-radius: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  border-style: solid;
+  transition-duration: 0.1s;
+  box-shadow: 0 4px #999;
+  width: 70px;
+  text-align: center;
+}
+
+button:active {
+  box-shadow: 0 2px #777;
+  transform: translateY(2px);
+  color: #443f40;
+  border-color: #443f40;
+}
+
+.red {
+  background-color: #c30a18;
+  border-color: #c30a18;
+  color: white;
+}
+
+.red:hover {
+  background-color: white;
+  color: #c30a18
+}
+
+.white:hover {
+  background-color: #c30a18;
+  color: white;
+}
+
+.white {
+  background-color: white;
+  border-color: white;
+  color: #c30a18
+  
+}
+
+.red:active,
+.white:active {
+  color: #443f40;
+  background-color: #bcb8b9;
+}
+
 .heading {
   /* display: block; */
   color: #adad4b;
@@ -19,6 +100,28 @@ body {
 .heading .main {
   font-size: 42px;
   margin: 0px 30px;
+}
+
+.top-settings {
+  display: flex;
+  gap: 20px;
+}
+
+.top-settings .resolution,
+.top-settings .color,
+.top-settings .shader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #c30a18;
+  font-weight: 700;
+  gap: 10px;
+  justify-content: center;
+}
+
+.pick-color {
+  border-radius: 10px;
+  background-color: white;
 }
 
 .grid {
@@ -60,5 +163,27 @@ body {
   border-bottom-right-radius: 20px;
 }
 
+.spinner {
+  background-color: white;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 40px
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.spinner-left {
+  margin-left: 10%;
+  margin-right: auto;
+}
+
+.spinner-right {
+  margin-right: 10%;
+  margin-left: auto;
+}
 
 
