Adds 'Lighten' pen functionality
Pen will start by drawing default pen color, and lighten the pixel by 10% with each touch.

If a pixel was drawn with a different pen color, that color will be preserved, but made lighter.

Only one of 'Lighten' and 'Darken' shaders can be enabled at a time.

--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ button {
   text-align: center;
 }
 
-button:active {
+button:active,
+.disabled {
   box-shadow: 0 2px #777;
   transform: translateY(2px);
   color: #443f40;
@@ -85,8 +86,11 @@ button:active {
 
 .red:active,
 .white:active,
-.disabled {
+.disabled,
+.disabled:active,
+.disabled:hover {
   color: #443f40;
+  border-color: #443f40;
   background-color: #bcb8b9;
 }
 
